# suica-viewer

./: .gitignore  LICENSE  README.ja.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
suica_viewer/: auth_client.py  cli.py  gui.py  station_code_lookup.py  utils.py
